fixed stamps spacing view

--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -1480,10 +1480,10 @@
       flex: 0 0 25%;
       max-width: 25%;
     }
-    .col-md-4 {
-      flex: 0 0 !important;
-      max-width: 33.33333%;
-    }
+    /*.col-md-4 {*/
+    /*  flex: 0 0 !important;*/
+    /*  max-width: 33.33333%;*/
+    /*}*/
     .col-md-5 {
       flex: 0 0 41.66667%;
       max-width: 41.66667%;
